--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,31 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
 body {
-}
-.header {
-    height: 200px;
-    background-color: aquamarine;
+    margin:0;
 }
 
-.header h1 {
-    text-align: center;
-    padding-top: 80px;
-}
-
-.content {
-    margin-left: auto;
-    margin-right: auto;
+.wrapper {
+    margin: 0 auto;
     width: 900px;
+}
+
+.header {
+
+}
+
+.content{
+    position: relative;
+    margin: 50px auto;
+}
+
+.footer {
+    background-color: red;
+    text-align: center;
+}
+
+.filter {
+    position: absolute;
+    right: 0;
+    top: -30px;
+}
+.food-list li{
+    display: block;
 }
