--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,28 @@
-body {
-    margin:0;
+html,body {
+    margin: 0;
 }
-
+h1{
+    margin: 13px 0 0 0;
+}
+a{
+    text-decoration: none;
+}
+body{
+    background-color: #f5f5f5;
+}
 .wrapper {
     margin: 0 auto;
     width: 900px;
 }
 
 .header {
-
+    background-color: white;
 }
 
-.content{
+
+.content {
     position: relative;
+    background-color: aqua;
     margin: 50px auto;
 }
 
@@ -25,7 +35,48 @@ body {
     position: absolute;
     right: 0;
     top: -30px;
+    /*float:right;*/
 }
-.food-list li{
+
+.food-list li {
     display: block;
+}
+.fl{
+    float:left;
+}
+.fr{
+    float:right;
+}
+
+.nav {
+    width: 980px;
+    height: 80px;
+    margin: 0 auto;
+}
+
+.search-box {
+    height: 34px;
+    margin-top: 23px;
+    padding-left: 50px;
+}
+.search-box .header-search{
+    border: 2px solid #ff6900;
+    border-right: 0 none;
+    color: #a9a9a9;
+    display: block;
+    font-size: 14px;
+    height: 14px;
+    line-height: 14px;
+    padding: 7px 0 7px 10px;
+    width: 308px;
+}
+.search-box .doSearch {
+    background-color: #ff6900;
+    color: #ffffff;
+    display: block;
+    font-size: 14px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    width: 70px;
 }
