--- a/css/style.css
+++ b/css/style.css
@@ -22,25 +22,44 @@ body{
 
 .content {
     position: relative;
-    background-color: aqua;
+    background-color: #ffffff;
     margin: 50px auto;
+    width: 800px;
+    border: 1px solid #ebebeb;
 }
 
 .footer {
-    background-color: red;
+    background-color: #ff5915;
     text-align: center;
 }
 
 .filter {
     position: absolute;
-    right: 0;
+    right: 30px;
     top: -30px;
     /*float:right;*/
 }
 
-.food-list li {
+.food {
     display: block;
+    height: 69px;
+    border-bottom: 1px solid #ebebeb;
 }
+.food .description{
+    margin-left: 50px;
+    margin-top: 25px;
+    font-size:18px;
+}
+.food .choose{
+    margin-right:100px;
+    margin-top: 25px;
+}
+.food .price{
+    margin-right:20px;
+    margin-top: 25px;
+    font-size: 18px;
+}
+
 .fl{
     float:left;
 }
@@ -79,4 +98,30 @@ body{
     line-height: 32px;
     text-align: center;
     width: 70px;
+}
+
+.submit {
+    margin-left: 550px;
+    font-size: 22px;
+}
+.submit .userName{
+    margin-top: 10px;
+}
+.submit .totalPrice{
+    margin-top: 10px;
+}
+.submit .confirm{
+    width:100px;
+    margin: 15px auto;
+}
+.button{
+    background-color: #ff6900;
+    color: #ffffff;
+    display: block;
+    font-size: 14px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    width: 70px;
+
 }
