--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ body{
     margin: 15px auto;
 }
 .button{
+    margin: 10px;
     background-color: #ff6900;
     color: #ffffff;
     display: block;
@@ -128,4 +129,42 @@ body{
     text-align: center;
     width: 70px;
 
+}
+
+.orderList {
+    font-size: 22px;
+    font-weight: bold;
+    width: 350px;
+    margin: 20px auto;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    text-align: center;
+    background-color: #fffbe4;
+    border: 3px solid #6f6f6f;
+}
+.orderList .redLine{
+    width: 100%;
+    height: 2px;
+    background-color: red;
+}
+.orderList ul{
+    padding-left: 0;
+    width: 240px;
+    margin: 10px auto;
+    text-align: left;
+}
+.orderList ul li{
+    width: 100%;
+    font-weight: normal;
+    color: #ff4d69;
+    display: block;
+    overflow: hidden;
+    margin-top: 10px;
+    font-size: 16px;
+}
+.orderList p{
+}
+.orderList button{
+    font-size: 20px;
+    font-weight: bold;
 }
