--- a/partials/food-submit.html
+++ b/partials/food-submit.html
@@ -1,7 +1,13 @@
-<ul>
-    <li>提交页面</li>
-    <li>提交页面</li>
-    <li>提交页面</li>
-    <li>提交页面</li>
-    <li>提交页面</li>
-</ul>
+<div class="orderList">
+    <p>{{userName}}，以下是你点的餐品:</p>
+    <div class="redLine"></div>
+    <ul>
+        <li ng-repeat="food in orderList"><span class="fl">{{food.name}}</span><span class="fr">价格: ￥{{food.price}}</span></li>
+    </ul>
+    <div class="redLine"></div>
+    <p>总价: ￥{{totalPrice.toFixed(2)}}</p>
+    <div>
+        <a href="javascript:alert('ok');"><button>确认</button></a>
+        <a ng-href="#/"><button>返回</button></a>
+    </div>
+</div>
